--- a/ty_1.8B_chat/1_ty_start.ipynb
+++ b/ty_1.8B_chat/1_ty_start.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-23 15:57:08,819 - modelscope - WARNING - Model revision not specified, use revision: v1.0.0\n",
-      "Try importing flash-attention for faster inference...\n"
+      "2024-05-25 16:43:29,226 - modelscope - INFO - PyTorch version 2.3.0+cu118 Found.\n",
+      "2024-05-25 16:43:29,228 - modelscope - INFO - Loading ast index from /home/baitongyuan/.cache/modelscope/ast_indexer\n",
+      "2024-05-25 16:43:29,395 - modelscope - INFO - Loading done! Current index file version is 1.14.0, with md5 e04a9f7a2366e8981cf40ef49327d4ba and a total number of 976 components indexed\n",
+      "/home/baitongyuan/anaconda3/envs/llm/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2024-05-25 16:43:31,340 - modelscope - WARNING - Model revision not specified, use revision: v1.1.8\n",
+      "Warning: please make sure that you are using the latest codes and checkpoints, especially if you used Qwen-7B before 09.25.2023.请使用最新模型和代码，尤其如果你在9月25日前已经开始使用Qwen-7B，千万注意不要使用错误代码和模型。\n",
+      "Try importing flash-attention for faster inference...\n",
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:12<00:00,  4.13s/it]"
      ]
     },
     {
@@ -18,6 +25,13 @@
      "output_type": "stream",
      "text": [
       "end\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -31,7 +45,8 @@
     "# model_dir = snapshot_download('qwen/Qwen-7B-Chat')\n",
     "# model_dir = snapshot_download('qwen/Qwen-14B')\n",
     "# model_dir = snapshot_download('qwen/Qwen-14B-Chat')\n",
-    "model_dir = snapshot_download('qwen/Qwen-1_8B-Chat-Int4')\n",
+    "# model_dir = snapshot_download('qwen/Qwen-1_8B-Chat-Int4')\n",
+    "model_dir = snapshot_download('qwen/Qwen-7B-Chat-Int4')\n",
     "# config = AutoConfig.from_pretrained(model_dir,\n",
     "#                                           trust_remote_code=True)\n",
     "# config.disable_exllama = True\n",
@@ -48,15 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "城市: 青岛\n",
-      "日期: 1月2日\n"
+      "城市: 青岛 日期: 01-02\n"
      ]
     }
    ],
